gh-5427 Fix GWT compile issue